# Yeliztli

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: bundle-release.yml  ci.yml  nightly.yml  release.yml
alembic/versions/: 007_add_auto_update_settings.py  008_annotation_state_backfill.py  009_add_individuals_table.py  010_gnomad_gene_constraint.py  011_database_versions_genome_build.py
backend/: config.py  disclaimers.py  installer.py  main.py
backend/analysis/: allele_match.py  allergy.py  alpha1.py  amd.py  ancestry.py  apoe.py  cancer.py  cancer_prs.py  cardiovascular.py  evidence.py  finding_diff.py  fitness.py  gene_constraint.py  gene_health.py  genotype_lookup.py  gnomix_inference.py  hemochromatosis.py  kinship.py  lai.py  lai_runner.py  lhon.py  methylation.py  mt_rnr1.py  nutrigenomics.py  parkinsons.py  pharmacogenomics.py  provenance.py  prs.py  qc.py  qc_carriage.py  rare_variant_finder.py  return_framing.py  risk_genotype.py  run_all.py  sex_aneuploidy.py  skin.py  sleep.py  traits.py  zygosity.py
backend/annotation/: bulk_load.py  clinvar.py  cpic.py  dbnsfp.py  dbsnp.py  encode_ccres.py  engine.py  gnomad.py  gnomad_constraint.py  gwas.py  http_download.py  mondo_hpo.py
backend/api/: dependencies.py
backend/data/: gene_inheritance_overrides.json
backend/db/: build_guard.py  database_registry.py  download_manager.py  manifest.py  reference_schema.py  sample_schema.py  tables.py  update_manager.py
backend/ingestion/: base.py  chromosomes.py  dispatcher.py  liftover.py  parser_23andme.py  parser_ancestrydna.py
backend/services/: __init__.py  lai_coverage_gate.py  sample_delete.py  sample_merge.py  sex_inference.py  staleness.py
backend/tasks/: huey_tasks.py
bundles/: manifest.json
docs/: ANCESTRY_MODULE.md  annotation-validation-strategy.md  bundle-release-runbook.md  lai-bundle-mid-rebalance-runbook.md  lai-bundle-release-runbook-env.lock.yaml  lai-bundle-release-runbook.md  multi-source-merging.md  phase-f-remaining-plan.md  setup-guide.md  setup-update-plan.md  setup-update-steps.md  sex_inference_threshold_validation.md  test-suite-audit-and-ci-tiering.md  test-suite-debt-remediation-plan.md  usage-guide.md
docs/release-notes/: bundle-v2.0.0.md  gnomad-bundle-v1.0.0.md  lai-bundle-v2.0.0.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
launchd/: com.yeliztli.api.plist  com.yeliztli.huey.plist
scripts/: augment_pca_bundle_rsids.py  backfill_individuals.py  build_ancestrydna_site_list.py  build_gnomad_bundle.py  build_union_catalog.py  build_vep_bundle.py  extract_vep_bundle_rsids.py  generate_vep_input.py  preflight_bundle_v2.sh  regenerate_ancestry_fixtures.py  regenerate_fixtures.py  validate_sex_thresholds.py
scripts/lai_bundle_v2/: 01_download_panel.sh  02_prepare_sites.sh  03_subset_panel.sh  04_admixture_filter.sh  04c_filter_single_ancestry.py  05_train_gnomix.sh  06_validate.sh  06a_identify_trios.py  06b_mendelian_phasing.py  06c_beagle_loo_phasing.sh  06d_phasing_accuracy.py  06e_lai_accuracy.py  06f_heldout_superpop_accuracy.py  06f_select_heldout.py  07_assemble_bundle.sh  07_write_metadata.py  env.sh  extract_heldout_fixtures.py  run_rebuild.sh  run_rebuild_slurm.sh
systemd/: yeliztli-api.service  yeliztli-huey.service
tests/: conftest.py
tests/backend/: _carriage_fixtures.py  conftest.py  test_admin_api.py  test_alembic_backfill.py  test_allele_match.py  test_alpha1.py  test_alpha1_api.py  test_alt_rsid_collapse.py  test_amd.py  test_amd_api.py  test_ancestry.py  test_ancestry_e2e.py  test_ancestry_matched_af.py  test_annotation_engine.py  test_apol1.py  (+147 more)
(+180 files in other folders)
